# crsh

./: .gitignore  Cargo.toml  LICENSE  README.md
crsh-core/: Cargo.toml
crsh-core/src/: lib.rs  net.rs
crsh-gui/: index.html  package-lock.json  package.json  vite.config.ts
crsh-gui/src/: App.css  App.tsx  Filesystem.tsx  Types.tsx
crsh-gui/src-tauri/: Cargo.toml  tauri.conf.json
crsh-gui/src-tauri/src/: lib.rs  main.rs
crsh-server/: Cargo.toml
crsh-server/src/: main.rs
crsh-tx/: Cargo.toml
crsh-tx/src/: main.rs
src/: main.rs
