[package]
name = "crsh-server"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
lto = true
strip = true

[dependencies]
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
crsh-core = { path = "../crsh-core" }
axum = "0.8.6"

